Clean up FeedCredentials class

--- a/Vienna/Interfaces/Base.lproj/FeedCredentials.xib
+++ b/Vienna/Interfaces/Base.lproj/FeedCredentials.xib
@@ -8,15 +8,14 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="FeedCredentials">
             <connections>
-                <outlet property="cancelButton" destination="8" id="19"/>
                 <outlet property="credentialsWindow" destination="5" id="23"/>
                 <outlet property="disclosureView" destination="9sn-iE-dLB" id="Urt-Pt-0Ss"/>
                 <outlet property="feedTextField" destination="wqz-QH-Upv" id="bJE-yV-u2w"/>
                 <outlet property="feedURLTextField" destination="OQl-Ef-CsF" id="z5D-to-BNf"/>
+                <outlet property="messageTextField" destination="10" id="22"/>
                 <outlet property="okButton" destination="14" id="20"/>
-                <outlet property="password" destination="11" id="18"/>
-                <outlet property="promptString" destination="10" id="22"/>
-                <outlet property="userName" destination="7" id="17"/>
+                <outlet property="passwordTextField" destination="11" id="18"/>
+                <outlet property="userNameTextField" destination="7" id="17"/>
                 <outlet property="window" destination="5" id="21"/>
             </connections>
         </customObject>
@@ -134,7 +133,7 @@ Gw
 </string>
                         </buttonCell>
                         <connections>
-                            <action selector="doCancelButton:" target="-2" id="24"/>
+                            <action selector="cancel:" target="-2" id="24"/>
                             <outlet property="nextKeyView" destination="14" id="29"/>
                         </connections>
                     </button>
@@ -148,7 +147,7 @@ DQ
 </string>
                         </buttonCell>
                         <connections>
-                            <action selector="doOKButton:" target="-2" id="25"/>
+                            <action selector="updateCredentials:" target="-2" id="25"/>
                             <outlet property="nextKeyView" destination="7" id="28"/>
                         </connections>
                     </button>
