--- a/Vienna/Interfaces/Base.lproj/Preferences.storyboard
+++ b/Vienna/Interfaces/Base.lproj/Preferences.storyboard
@@ -235,7 +235,7 @@
                 </viewController>
                 <customObject id="NAv-gX-ZtR" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="127" y="1250"/>
+            <point key="canvasLocation" x="127" y="1229"/>
         </scene>
         <!--Advanced-->
         <scene sceneID="99N-ez-bLO">
@@ -457,18 +457,18 @@ After changing this setting, restart Vienna to test it. Feedback is very welcome
                 </viewController>
                 <customObject id="kO8-qM-JFc" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="619" y="1202"/>
+            <point key="canvasLocation" x="619" y="1177"/>
         </scene>
         <!--Appearance-->
         <scene sceneID="YM9-5d-aO0">
             <objects>
                 <viewController title="Appearance" id="U0J-a5-0Pj" customClass="AppearancePreferencesViewController" sceneMemberID="viewController">
                     <view key="view" id="57X-N5-EiK">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="188"/>
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="145"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WR8-u8-Vm9">
-                                <rect key="frame" x="18" y="150" width="96" height="16"/>
+                                <rect key="frame" x="18" y="107" width="97" height="16"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Article list font:" id="ITA-U9-lhX">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -479,7 +479,7 @@ After changing this setting, restart Vienna to test it. Feedback is very welcome
                                 </connections>
                             </textField>
                             <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1RP-By-TQq">
-                                <rect key="frame" x="120" y="147" width="233" height="21"/>
+                                <rect key="frame" x="121" y="104" width="232" height="21"/>
                                 <textFieldCell key="cell" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" drawsBackground="YES" id="3NA-G9-1c6">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -487,42 +487,13 @@ After changing this setting, restart Vienna to test it. Feedback is very welcome
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5dd-GM-M3b">
-                                <rect key="frame" x="354" y="140" width="83" height="32"/>
+                                <rect key="frame" x="354" y="97" width="83" height="32"/>
                                 <buttonCell key="cell" type="push" title="Select…" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cbn-xq-UFr">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
                                     <action selector="selectArticleFont:" target="U0J-a5-0Pj" id="JF2-s3-SKA"/>
-                                </connections>
-                            </button>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cAr-Rb-nLB">
-                                <rect key="frame" x="18" y="119" width="96" height="16"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Folder list font:" id="M8s-xu-lWh">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                                <connections>
-                                    <accessibilityConnection property="title" destination="kjQ-IL-0ll" id="aV8-bZ-M7k"/>
-                                </connections>
-                            </textField>
-                            <textField verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kjQ-IL-0ll">
-                                <rect key="frame" x="120" y="116" width="233" height="21"/>
-                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" drawsBackground="YES" id="QsM-oK-2uw">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="m6u-2B-CWe">
-                                <rect key="frame" x="354" y="109" width="83" height="32"/>
-                                <buttonCell key="cell" type="push" title="Select…" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="PmX-nw-uOn">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="selectFolderFont:" target="U0J-a5-0Pj" id="YE3-Eq-3W3"/>
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1fA-eb-j2c">
@@ -581,24 +552,15 @@ After changing this setting, restart Vienna to test it. Feedback is very welcome
                             <constraint firstItem="1RP-By-TQq" firstAttribute="top" secondItem="57X-N5-EiK" secondAttribute="top" constant="20" symbolic="YES" id="6Uk-oG-Qva"/>
                             <constraint firstItem="mm1-tH-CAy" firstAttribute="top" secondItem="wIv-zK-n6S" secondAttribute="bottom" constant="20" id="8D1-L7-C4t"/>
                             <constraint firstItem="1RP-By-TQq" firstAttribute="leading" secondItem="WR8-u8-Vm9" secondAttribute="trailing" constant="8" symbolic="YES" id="8hd-ut-fEe"/>
-                            <constraint firstItem="kjQ-IL-0ll" firstAttribute="trailing" secondItem="1RP-By-TQq" secondAttribute="trailing" id="C7B-g1-cX6"/>
                             <constraint firstAttribute="trailing" secondItem="5dd-GM-M3b" secondAttribute="trailing" constant="20" symbolic="YES" id="Ie4-lM-6py"/>
-                            <constraint firstItem="1fA-eb-j2c" firstAttribute="top" secondItem="kjQ-IL-0ll" secondAttribute="bottom" constant="20" id="KlV-HK-DuD"/>
-                            <constraint firstItem="cAr-Rb-nLB" firstAttribute="baseline" secondItem="kjQ-IL-0ll" secondAttribute="baseline" id="OUa-CF-yXF"/>
-                            <constraint firstItem="kjQ-IL-0ll" firstAttribute="leading" secondItem="cAr-Rb-nLB" secondAttribute="trailing" constant="8" symbolic="YES" id="RJn-qK-bEk"/>
                             <constraint firstItem="WR8-u8-Vm9" firstAttribute="baseline" secondItem="1RP-By-TQq" secondAttribute="baseline" id="UfI-Uc-u7Y"/>
                             <constraint firstItem="wIv-zK-n6S" firstAttribute="leading" secondItem="1fA-eb-j2c" secondAttribute="leading" constant="18" id="WLf-O2-LEI"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="MkS-Vx-yr4" secondAttribute="trailing" constant="20" symbolic="YES" id="WzZ-ou-ZOn"/>
                             <constraint firstItem="wIv-zK-n6S" firstAttribute="top" secondItem="1fA-eb-j2c" secondAttribute="bottom" constant="8" symbolic="YES" id="ZJq-Px-ZUw"/>
                             <constraint firstItem="MkS-Vx-yr4" firstAttribute="leading" secondItem="wIv-zK-n6S" secondAttribute="trailing" constant="8" symbolic="YES" id="ZdQ-Bp-1xM"/>
-                            <constraint firstItem="kjQ-IL-0ll" firstAttribute="leading" secondItem="1RP-By-TQq" secondAttribute="leading" id="aS9-Tf-9bf"/>
                             <constraint firstItem="1RP-By-TQq" firstAttribute="baseline" secondItem="5dd-GM-M3b" secondAttribute="baseline" id="bKL-p5-Op5"/>
                             <constraint firstAttribute="trailing" secondItem="1fA-eb-j2c" secondAttribute="trailing" constant="20" symbolic="YES" id="bYP-Li-ls9"/>
-                            <constraint firstItem="m6u-2B-CWe" firstAttribute="leading" secondItem="kjQ-IL-0ll" secondAttribute="trailing" constant="8" symbolic="YES" id="c8e-rm-qRG"/>
-                            <constraint firstAttribute="trailing" secondItem="m6u-2B-CWe" secondAttribute="trailing" constant="20" symbolic="YES" id="hUO-9V-Omd"/>
-                            <constraint firstItem="m6u-2B-CWe" firstAttribute="baseline" secondItem="kjQ-IL-0ll" secondAttribute="baseline" id="kyb-4a-MfH"/>
-                            <constraint firstItem="cAr-Rb-nLB" firstAttribute="leading" secondItem="57X-N5-EiK" secondAttribute="leading" constant="20" symbolic="YES" id="l3I-W6-Q4o"/>
-                            <constraint firstItem="kjQ-IL-0ll" firstAttribute="top" secondItem="1RP-By-TQq" secondAttribute="bottom" constant="10" symbolic="YES" id="qwr-SO-aPv"/>
+                            <constraint firstItem="1fA-eb-j2c" firstAttribute="top" secondItem="1RP-By-TQq" secondAttribute="bottom" constant="8" symbolic="YES" id="qwr-SO-aPv"/>
                             <constraint firstAttribute="bottom" secondItem="mm1-tH-CAy" secondAttribute="bottom" constant="20" symbolic="YES" id="rKP-F0-CLI"/>
                         </constraints>
                     </view>
@@ -606,15 +568,13 @@ After changing this setting, restart Vienna to test it. Feedback is very welcome
                         <outlet property="articleFontSample" destination="1RP-By-TQq" id="42Z-GC-ILC"/>
                         <outlet property="articleFontSelectButton" destination="5dd-GM-M3b" id="vxp-dS-ZQu"/>
                         <outlet property="enableMinimumFontSize" destination="wIv-zK-n6S" id="i4y-nE-SFQ"/>
-                        <outlet property="folderFontSample" destination="kjQ-IL-0ll" id="VQC-Br-omQ"/>
-                        <outlet property="folderFontSelectButton" destination="m6u-2B-CWe" id="Brq-jd-yfU"/>
                         <outlet property="minimumFontSizes" destination="MkS-Vx-yr4" id="q88-CO-9G9"/>
                         <outlet property="showFolderImagesButton" destination="mm1-tH-CAy" id="aVO-gt-B6W"/>
                     </connections>
                 </viewController>
                 <customObject id="oWj-3D-ThY" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="127" y="983"/>
+            <point key="canvasLocation" x="127" y="967"/>
         </scene>
         <!--General-->
         <scene sceneID="Bqg-9r-5LY">
